@@ -1,6 +1,7 @@
 
-Drupal 7.43, xxxx-xx-xx (development version)
+Drupal 7.43, 2016-02-24
 -----------------------
+- Fixed security issues (multiple vulnerabilities). See SA-CORE-2016-001.
 
 Drupal 7.42, 2016-02-03
 -----------------------
